# Blackhole

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
shader/: blackhole_main.frag  bloom_brightness_pass.frag  bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  passthrough.frag  simple.vert  tonemapping.frag
src/: GLDebugMessageCallback.cc  GLDebugMessageCallback.h  main.cpp  render.cpp  shader.cpp
